corrigindo o desafio do curso , só falta adicioar um readme agr

--- a/index.html
+++ b/index.html
@@ -22,44 +22,44 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="./src/images/logo.svg" alt="Logo da página">
-        </div>
+        <img src="./src/images/logo.svg" alt="Logo da página">
     </header>
 
     <main>
-        <section>
-            <div class="container">
-                <div class="ilustracao">
-                    <img src="./src/images/illustration-mockups.svg" alt="Ilustração">
-                </div>
+        <div class="container">
+            <img src="./src/images/illustration-mockups.svg" alt="Ilustração">
 
-                <div class="texto-container">
-                    <h1>Build The Community Your Fans Will Love</h1>
+            <div class="texto-container">
+                <h1>Build The Community Your Fans Will Love</h1>
 
-                    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-                        Create connections with your users as you engage in genuine discussion.</p>
+                <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+                    Create connections with your users as you engage in genuine discussion.</p>
 
-                    <a href="" target="_blank">Register</a>
-                </div>
+                <a href="" target="_blank">Register</a>
             </div>
-        </section>
+        </div>
     </main>
 
     <footer>
-        <div class="redes-sociais">
-            <a href="" target="_blank">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
+        <ul class="redes-sociais">
+            <li>
+                <a href="" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
 
-            <a href="" target="_blank">
-                <i class="fa-brands fa-twitter"></i>
-            </a>
+            <li>
+                <a href="" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+            </li>
 
-            <a href="" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-        </div>
+            <li>
+                <a href="" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://kit.fontawesome.com/20bf5464c4.js" crossorigin="anonymous"></script>
